AdvPump accepts block module